--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ REACT APP ile yap
 <body>
     <div class="container">
         <div class="row">
-            <div id="contentCount" class="form-group col-4 offset-md-4 mt-4">
+            <div id="contentCount" class="form-group col-sm-12 col-md-12 mt-4">
                 <label class="form-control">Kaç elementlik bir alaşım hesabı yapmak istiyorsunuz?</label>
                 <input type="number" id="elementCount" class="form-control text-center"> <button id="btnContentBuilder"
                     class="form-control mt-2">Getir</button>
